--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,9 @@
         <!-- https://favicon.io/emoji-favicons/money-bag/ -->
         <link href="/static/favicon.ico" rel="icon">
 
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/css/styles.css" rel="stylesheet">
 
-        <title>C$50 Finance: {% block title %}{% endblock %}</title>
+        <title> ВИУКОНП {% block title %}{% endblock %}</title>
 
     </head>
 
@@ -24,22 +24,29 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">C</span><span class="red">$</span><span class="yellow">5</span><span class="green">0</span> <span class="red">Finance</span></a>
+                <a class="navbar-brand" href="/"><span>ТАНТК</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/smth">Something</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">ТИТУЛЬНЫЙ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/pc">ПК</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/office_equipment">ОРГТЕХНИКА</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/employees">СОТРУДНИКИ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/cards">КАРТОЧКИ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/history">ИСТОРИЯ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/employees">БАНК ЛИЦЕНЗИЙ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/employees">ПОЛУЧЕННОЕ ОБОРУДОВАНИЕ</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout">ВЫЙТИ</a></li>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/register">РЕГИСТРАЦИЯ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/login">ВОЙТИ</a></li>
                         </ul>
                     {% endif %}
                 </div>
