--- a/templates/pc.html
+++ b/templates/pc.html
@@ -8,48 +8,46 @@
     <main class="container py-5 text-center">
         <div class="toolbar">
             
-            <button>
+            <button  title="ПОИСК">
                 <div class="add_button">
                     <div class="text_button"><img src="../static/images/icons/search.png" alt=""></div>
                 </div>
             </button>
-            <button>
+            <button title="ДОБАВИТЬ ЭЛЕМЕНТ В ТАБЛИЦУ">
                 <div class="add_button">
                     <div class="text_button"><img src="../static/images/icons/plus.png" alt=""></div>
                 </div>
             </button>
         </div>
         <div class='scroll-table'>
-            <table class="table table-striped">
+            <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th class="text-start"><div>ID</div></th>
-                        <th class="text-start"><div>Тип</div></th>
-                        <th class="text-start"><div>Класс</div></th>
-                        <th class="text-start"><div>Материнская плата</div></th>
-                        <th class="text-start"><div>ОЗУ</div></th>
-                        <th class="text-start"><div>Жесткий диск</div></th>
-                        <th class="text-start"><div>Видеокарта</div></th>
-                        <th class="text-start"><div>Процессор</div></th>
-                        <th class="text-start"><div>Наличие CD-rom</div></th>
-                        <th class="text-start"><div>Наличие внешней сетевой карты</div></th>
-                        <th class="text-start"><div>Версия О</div>С</th>
-                        <th class="text-start"><div>ПО</div></th>
-                        <th class="text-start"><div>Инфентарный номер</div></th>
-                        <th class="text-start"><div>Сетевое название</div></th>
-                        <th class="text-start"><div>Имя пользователя</div></th>
-                        <th class="text-start"><div>Имя пользователя</div></th>
-                        <th class="text-start"><div>IP адрес</div></th>
-                        <th class="text-start"><div>Внешний IP адрес</div></th>
-                        <th class="text-start"><div>Номер требования</div></th>
-                        <th class="text-start"><div>Имя пользователя</div></th>
+                        <th class="text-center">ID</th>
+                        <th class="text-center">Тип</th>
+                        <th class="text-center">Класс</th>
+                        <th class="text-center">Материнская плата</th>
+                        <th class="text-center">ОЗУ</th>
+                        <th class="text-center">Жесткий диск</th>
+                        <th class="text-center">Видеокарта</th>
+                        <th class="text-center">Процессор</th>
+                        <th class="text-center">Наличие CD-rom</th>
+                        <th class="text-center">Наличие внешней сетевой карты</th>
+                        <th class="text-center">Версия ОС</th>
+                        <th class="text-center">ПО</th>
+                        <th class="text-center">Инфентарный номер</th>
+                        <th class="text-center">Сетевое название</th>
+                        <th class="text-center">Имя пользователя</th>
+                        <th class="text-center">Имя пользователя</th>
+                        <th class="text-center">IP адрес</th>
+                        <th class="text-center">Внешний IP адрес</th>
+                        <th class="text-center">Номер требования</th>
+                        <th class="text-center">Имя пользователя</th>
     
                     </tr>
                 </thead>
-            </table>
-                <div class="scroll-table-body ">
-                <table>
-                <tbody >
+
+                <tbody class="tbody">
                     <tr>
                         <td class="text-start"><input class="search" type="text"></td>
                         <td class="text-start"><input class="search" type="text"></td>
