--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,11 +78,11 @@ th {
     padding-top: 0px;
     overflow-y: scroll;
     position: relative;
-    height: 700px;
+    max-height: 700px;
 }
 .tbody {
     overflow-y: scroll;
-    height: 700px;
+    max-height: 700px;
 }
 
 thead {
