--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,8 +37,8 @@
                             <li class="nav-item"><a class="nav-link" href="/employees">СОТРУДНИКИ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/cards">КАРТОЧКИ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">ИСТОРИЯ</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/employees">БАНК ЛИЦЕНЗИЙ</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/employees">ПОЛУЧЕННОЕ ОБОРУДОВАНИЕ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/bank">БАНК ЛИЦЕНЗИЙ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/equipment_received">ПОЛУЧЕННОЕ ОБОРУДОВАНИЕ</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">ВЫЙТИ</a></li>
