--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,11 +31,10 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/">ТИТУЛЬНЫЙ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/title">ТИТУЛЬНЫЙ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/pc">ПК</a></li>
                             <li class="nav-item"><a class="nav-link" href="/office_equipment">ОРГТЕХНИКА</a></li>
                             <li class="nav-item"><a class="nav-link" href="/employees">СОТРУДНИКИ</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/cards">КАРТОЧКИ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">ИСТОРИЯ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/bank">БАНК ЛИЦЕНЗИЙ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/equipment_received">ПОЛУЧЕННОЕ ОБОРУДОВАНИЕ</a></li>
