create title form

--- a/templates/tables.html
+++ b/templates/tables.html
@@ -25,7 +25,7 @@
                 <thead>
                     <tr>
                         {% for title in values['titles'] %}
-                            <th class="text-center">{{title}}</th>
+                            <th class="text-center"><div>{{title}}</div></th>
                         {% endfor %}
 
                     </tr>
