--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -61,13 +61,14 @@ nav .navbar-brand .green
 /* Table */
 
 .search {
-    width: 120px;
+    width: 100%;
     height: 30px;
     padding-left: 5px;
 }
 
 th div {
     width: 123px;
+    text-align: center;
 
 
 }
@@ -95,3 +96,34 @@ thead {
 }
 
 
+/* Title Form */
+
+.item {
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    text-align: left;
+    margin-bottom: 9px;
+}
+
+.item .form-control {
+    left: 0;
+    width: 80%;
+}
+
+
+
+.item a {
+    margin-left: 9px;
+    width: 25%;
+    text-align: left;
+}
+
+.checkboxes {
+    margin-left: 10px;
+}
+
+
+.false {
+    display: none;
+}
