--- a/templates/title_form.html
+++ b/templates/title_form.html
@@ -44,7 +44,7 @@
         </div>
                 {% for value in values["office_equipment"] %}
                     <div class="item false" id="{{loop.index}}_model_container">
-                        <input class="form-control" type="text" value="" id="{{loop.index}}_model" placeholder="Серийный номер {{value}}">
+                        <input class="form-control" type="text" value="" id="{{loop.index}}_model" placeholder="ID {{value}}">
                         <a  href="/equipment_received"><i>все оборудование...</i></a>
                     </div>
                 
