--- a/templates/tables.html
+++ b/templates/tables.html
@@ -24,6 +24,7 @@
             <table id="table-view" class="table table-bordered">
                 <thead>
                     <tr>
+                        <th class="text-center"></th>
                         {% for title in values['titles'] %}
                             <th class="text-center"><div>{{title}}</div></th>
                         {% endfor %}
@@ -33,12 +34,14 @@
 
                 <tbody class="tbody">
                     <tr>
+                            <td class="text-center"></td>
                         {% for i in range(0, values['titles']|length) %}
                             <td class="text-start"><input class="search" type="text"></td>
                         {% endfor %}
                     </tr>
                {% for i in range(0, values['values']|length) %}
                     <tr>
+                        <td class="text-center"><a href="#" id="edit_{{i}}"><img class="icon_reset" src="../static/images/icons/pencil.png" alt=""></a></td>
                         {% for value in values['values'][i] %}
                             <td class="text-center">{{value}}</td>
                         {% endfor %}
