--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
                             <li class="nav-item"><a class="nav-link" href="/pc">ПК</a></li>
                             <li class="nav-item"><a class="nav-link" href="/office_equipment">ОРГТЕХНИКА</a></li>
                             <li class="nav-item"><a class="nav-link" href="/employees">СОТРУДНИКИ</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">ИСТОРИЯ</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="/history">ИСТОРИЯ</a></li>-->
                             <li class="nav-item"><a class="nav-link" href="/bank">БАНК ЛИЦЕНЗИЙ</a></li>
                             <li class="nav-item"><a class="nav-link" href="/equipment_received">ПОЛУЧЕННОЕ ОБОРУДОВАНИЕ</a></li>
                         </ul>
