--- a/templates/tables.html
+++ b/templates/tables.html
@@ -7,6 +7,7 @@
 {% block main %}
 <script src="./static/js/search.js"></script>
 <script src="./static/js/adding.js"></script>
+<link rel="stylesheet" href="./static/css/c">
 <main class="container py-5 text-center">
     <div class="toolbar">
 
@@ -22,6 +23,13 @@
                 <div class="text_button"><img src="../static/images/icons/plus.png" alt=""></div>
             </div>
         </button>
+
+
+            <div class="add_button">
+                <input  type="file" accept="text/csv" class="custom-file-input">
+            </div>
+
+
     </div>
     <div class='scroll-table'>
         <table id="table-view" class="table table-bordered">
