--- a/templates/tables.html
+++ b/templates/tables.html
@@ -26,7 +26,7 @@
 
 
             <div class="add_button">
-                <input  type="file" accept="text/csv" class="custom-file-input">
+                <input  type="file" onchange="check_file()" accept="text/csv" class="custom-file-input" id="file_button">
             </div>
 
 
@@ -70,5 +70,5 @@
     </div>
     </div>
 </main>
-
+<script src="../static/js/check_file.js"></script>
 {% endblock %}
