--- a/templates/tables.html
+++ b/templates/tables.html
@@ -7,6 +7,7 @@
 {% block main %}
 <script src="./static/js/search.js"></script>
 <script src="./static/js/adding.js"></script>
+<h2>ТАБЛИЦА {{ values['name'] }}</h2>
 <main class="container py-5 text-center">
     <div class="toolbar">
 
