load csv (work)

--- a/templates/tables.html
+++ b/templates/tables.html
@@ -25,8 +25,9 @@
         </button>
 
 
-            <div class="add_button">
-                <input  type="file" onchange="check_file()" accept="text/csv" class="custom-file-input" id="file_button">
+            <div class="csv_button">
+                <input  type="file" onchange="" accept="text/csv" class="custom-file-input" id="file_button">
+                <button onclick="check_file()">Загрузить</button>
             </div>
 
 
