--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,12 +29,13 @@ nav .navbar-brand .green
 .toolbar {
     display: flex;
     margin-bottom: 60px;
+    
 }
 
 .toolbar button {
-    padding: 0;
     border-radius: 50%;
     margin: 0 5px;
+    border: black 1px solid;
 }
 
 .text_button {
@@ -54,6 +55,18 @@ nav .navbar-brand .green
     width: 30px;
     height: 30px;
 
+}
+
+.csv_button {
+    margin-left: 10px;
+    border-radius: 5px;
+    border: black 1px solid;
+    padding: 9px;
+}
+
+.csv_button button {
+    border-radius: 5px;
+    padding: 3px;
 }
 
 
@@ -133,35 +146,3 @@ thead {
     display: none;
 }
 
-/* .custom-file-input {
-  color: transparent;
-}
-.custom-file-input::-webkit-file-upload-button {
-  visibility: hidden;
-}
-.custom-file-input::before {
-  content: 'Файл не выбран';
-  color: black;
-  display: inline-block;
-  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
-  border: 1px solid #999;
-  border-radius: 3px;
-  padding: 5px 8px;
-  outline: none;
-  white-space: nowrap;
-  -webkit-user-select: none;
-  cursor: pointer;
-  text-shadow: 1px 1px #fff;
-  font-weight: 700;
-  font-size: 10pt;
-
-}
-.custom-file-input:hover::before {
-  border-color: black;
-}
-.custom-file-input:active {
-  outline: 0;
-}
-.custom-file-input:active::before {
-  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
-} */
